@@ -40,6 +40,9 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       after fork on virtually all operating system, especially on OS X.
     - x2goclient.cpp: fix compile problems introduced with the last commit.
     - x2goclient.cpp: fix string comparison.
+    - x2goclient.cpp: create new argv array on the heap instead of on the
+      stack. Stack data will be invalid once the function goes out of scope
+      (which is what execv is doing.)
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
